// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - feature - LN-nota - signature - default renders with author signature 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column container-center-100 brand-color signature mb-16 mb-24_m"
  >
    <div
      class="flex flex-wrap w-100 w-full"
    >
      <div
        class="flex flex-column flex-wrap gap-16 w-100 flex-row_m ai-center_m ai-start w-full mb-16"
      >
        <div
          class="flex inline-flex ai-center gap-12"
        >
          <a
            class="link ln-link"
            href="/autor/mariano-grondona/"
            target="_self"
            title="Ir a notas de Mariano Grondona"
          >
            <div>
              <img
                class="image rounded-circle w-70 h-70 bg-neutral-light-50 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://bucket.glanacion.com/anexos/fotos/85/2089285.png"
              />
            </div>
          </a>
          <div
            class="flex j-center py-4 flex-column-reverse gap-8 py-4 text-neutral-light-600"
          >
            <span
              class="text text-14 text-neutral-light-600 uppercase"
            >
              LA NACION
            </span>
            <span>
              <span>
                <a
                  class="link ln-link"
                  href="/autor/mariano-grondona/"
                  target="_self"
                  title="Ir a notas de Mariano Grondona"
                >
                  <strong>
                    Mariano Grondona
                  </strong>
                </a>
              </span>
            </span>
          </div>
        </div>
        <button>
          Escuchar Nota
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components - feature - LN-nota - signature - default renders with distributor signature 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column container-center-100 brand-color signature mb-16 mb-24_m"
  >
    <div
      class="flex flex-column gap-16 w-100 flex-row_m ai-center_m ai-start"
    >
      <span
        class="text ln-text font-bold --xs"
      >
        LA NACION
      </span>
      <button>
        Escuchar Nota
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components - feature - LN-nota - signature - default renders without signature when no authors or distributor 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column container-center-100 brand-color signature mb-16 mb-24_m"
  >
    <div
      class="flex flex-column brand-color"
    >
      <button>
        Escuchar Nota
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components - feature - LN-nota - signature - default should not render custom voice when there are multiple authors 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column container-center-100 brand-color signature mb-16 mb-24_m"
  >
    <div
      class="flex flex-wrap w-100 w-full"
    >
      <div
        class="flex flex-column flex-wrap gap-16 w-100 flex-row_m ai-center_m ai-start w-full mb-16"
      >
        <div
          class="flex inline-flex ai-center gap-12"
        >
          <div
            class="flex j-center py-4 flex-column-reverse gap-8 py-4 text-neutral-light-600"
          >
            <span>
              Por 
              <span>
                <a
                  class="link ln-link"
                  href="/autor/paz-rodriguez-niell-160/"
                  target="_self"
                  title="Ir a notas de Paz Rodríguez Niell"
                >
                  <strong>
                    Paz Rodríguez Niell
                  </strong>
                </a>
                , 
              </span>
              <span>
                <a
                  class="link ln-link"
                  href="/autor/paz-rodriguez-niell-160/"
                  target="_self"
                  title="Ir a notas de Paz Rodríguez Niell"
                >
                  <strong>
                    Paz Rodríguez Niell
                  </strong>
                </a>
                 y 
              </span>
              <span>
                <a
                  class="link ln-link"
                  href="/autor/maia-jastreblansky-5/"
                  target="_self"
                  title="Ir a notas de Maia Jastreblansky"
                >
                  <strong>
                    Maia Jastreblansky
                  </strong>
                </a>
              </span>
            </span>
          </div>
        </div>
        <button>
          Escuchar Nota
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
